--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <div class="grid-container">
 
+    <div class="grid-container" id="grid-container"></div>
+
+    <div class="button-container">
+        <button type="button" class="button" id="clear-button">Clear</button>
+        <button type="button" class="button" id="default-button">Default</button>
+        <button type="button" class="button" id="change-size-button">Change Size</button>
+        <button type="button" class="button" id="draw-mode-button">Draw Mode</button>
+        <button type="button" class="button" id="pixel-mode-button">Pixel Mode</button>
+        <button type="button" class="button" id="color-mode-button">Color Mode</button>
     </div>
+
     <script src="index.js"></script>
 </body>
 </html>
