--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button type="button" class="button" id="color-mode-button">Color Mode</button>
     </div>
 
-    <script src="revision.js"></script>
-    <!-- <script src="index.js"></script> -->
+    <!-- <script src="revision.js"></script> -->
+    <script src="index.js"></script>
 </body>
 </html>
